<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/transactionInfoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Fill Transaction Information"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionInfoText" />

    <EditText
        android:id="@+id/categoryEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountEditText"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/transactionTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_transaction_type"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionEditText"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:id="@+id/transactionTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionTypeLabel"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/spendingRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spending" />

        <RadioButton
            android:id="@+id/profitRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profit" />
    </RadioGroup>

    <Button
        android:id="@+id/saveTransactionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/transactionTypeRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancelTransactionButton"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/cancelTransactionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/transactionTypeRadioGroup"
        app:layout_constraintStart_toEndOf="@id/saveTransactionButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
