<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/transactionsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        android:titleTextColor="@android:color/white"
        app:title="Profile" />

    <ImageView
        android:id="@+id/indicatorUserLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_user_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/indicatorUserLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:gravity="center" />

    <ImageView
        android:id="@+id/indicatorLogout"
        android:layout_width="34dp"
        android:layout_height="46dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toBottomOf="@id/logoutLabel"
        app:layout_constraintEnd_toStartOf="@+id/logoutLabel"
        app:layout_constraintTop_toTopOf="@id/logoutLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/logoutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="24sp"
        android:layout_marginStart="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLabel"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/indicatorContactDeveloper"
        android:layout_width="34dp"
        android:layout_height="46dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_contact_developer"
        app:layout_constraintBottom_toBottomOf="@id/contactDeveloperLabel"
        app:layout_constraintEnd_toStartOf="@+id/contactDeveloperLabel"
        app:layout_constraintTop_toTopOf="@id/contactDeveloperLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/contactDeveloperLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_developer"
        android:textSize="24sp"
        android:layout_marginStart="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoutLabel"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
