<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".fragments.Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topBar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/main_card"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="16dp"
                android:backgroundTint="@color/cardBackground"
                app:cardElevation="4dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/indicatorIncome2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_arrow_down"
                        app:layout_constraintBottom_toBottomOf="@+id/textIncome"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textIncome"
                        app:layout_constraintVertical_bias="0.6" />

                    <TextView
                        android:id="@+id/textBudget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/total_budget"
                        android:textColor="@color/textSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="4dp"
                        android:text=""
                        android:textColor="@color/textPrimary"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textBudget" />
                    <TextView
                        android:id="@+id/textExpenses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/expenses"
                        android:textColor="@color/textSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/budget" />
                    <TextView
                        android:id="@+id/expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text=""
                        android:textColor="@color/textPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textExpenses" />
                    <ImageView
                        android:id="@+id/indicatorExpenses"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_arrow_up"
                        app:layout_constraintStart_toEndOf="@id/textExpenses"
                        app:layout_constraintTop_toTopOf="@id/textExpenses"
                        app:layout_constraintBottom_toBottomOf="@id/textExpenses"
                        android:contentDescription="@string/icon" />
                    <TextView
                        android:id="@+id/income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="100dp"
                        android:text=""
                        android:textColor="@color/textPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textIncome"/>
                    <TextView
                        android:id="@+id/textIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/income"
                        android:textColor="@color/textSecondary"
                        app:layout_constraintEnd_toStartOf="@+id/indicatorIncome"
                        app:layout_constraintTop_toTopOf="parent" />
                    <ImageView
                        android:id="@+id/indicatorIncome"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_arrow_down"
                        app:layout_constraintBottom_toBottomOf="@+id/textIncome"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textIncome"
                        app:layout_constraintVertical_bias="0.6" />
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text=""
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textColor="@color/textSecondary"
                        android:background="@drawable/round"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/noTransactionsDoneText"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:text="@string/add_your_transaction_for_this_month"
                android:textColor="@color/textSecondary"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:visibility="gone"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/main_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_transactions"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textPrimary"
                app:layout_constraintTop_toBottomOf="@+id/main_card"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>